# miHoYo

./: .gitignore  Cargo.toml  Error_hotfix.bat  Horoyoi-sanSR Handbook.txt  Horoyoi-sanSR-LC.bat  LICENSE  README.md  Readme!!!.txt  ZZZCharacterIDs.md  build.gradle  build.zig  config.json  environment.toml  freesr-data.json  hotfix.bat  muip-tool-0.1-CHT.html  muip-tool-0.1.html  package-lock.json  persistent  run.bat  sdk.default.toml  trigger-server.bat  versions.json
ASL/: ActivityScheduling.json  Banners.json  Various_Artists-data.json  config.json  hotfix.json  uid.lua
BETA/: 8.2.13
ConfigScript/: GMGroupDemo.json  Gm_Item_Black_List.json  MainCity_1.json
FireflySR-Proxy/: config.tmpl.json
GenshinImpact_Beta/: 4.8.50
StarRail_CN_Beta/: 3.0.5x  3.1.5x
StarRail_OS_Beta/: 3.0.5x  3.1.5x
Yuanshen_Beta/: 5.0.50  5.2.50  5.4.50
_cfg/: avatar.toml  config.json  hotfix.json  scene.toml  server.toml
crates/battle-server/: Cargo.toml  battleserver.default.toml
crates/battle-server/src/: config.rs  main.rs  server_message_handler.rs
crates/battle-server/src/logic/: dungeon.rs  mod.rs
crates/battle-server/src/logic/scene/: fight.rs  mod.rs  rally.rs
crates/battle-server/src/session/: message.rs  mod.rs
crates/dispatch-server/: Cargo.toml  dispatch.default.toml
crates/dispatch-server/src/: config.rs  data.rs  http_handlers.rs  main.rs  ping.rs  query_dispatch.rs  query_gateway.rs
crates/evelyn-proto/: Cargo.toml  build.rs
crates/evelyn-proto/evelyn-proto-derive/: Cargo.toml
crates/evelyn-proto/src/: lib.rs
crates/game-server/: Cargo.toml  gameserver.toml
crates/game-server/src/: config.rs  database.rs  main.rs  player_util.rs  remote_config.rs  server_message_handler.rs
crates/game-server/src/level/: event_graph_runner.rs  mod.rs
crates/game-server/src/logic/: avatar_util.rs  bit_util.rs  dungeon_util.rs  equip_util.rs  gm_util.rs  mod.rs  scene_util.rs
crates/game-server/src/logic/player/: cafe.rs  equip.rs  item.rs  main_story.rs  mod.rs  player_util.rs  quest.rs  ramen.rs  role.rs  scene.rs  yorozuya.rs
crates/game-server/src/rpc_ptc/: abyss.rs  activity.rs  arcade.rs  babel_tower.rs  battle_pass.rs  camp_idle.rs  daily_challenge.rs  embattles.rs  fishing_contest.rs  gacha.rs  hadal_zone.rs  interact.rs  item.rs  main_city.rs  mod.rs  player.rs  quest.rs  ridus_got_boo.rs  shop.rs  social.rs  unlock.rs  vhs_store.rs  world.rs
crates/game-server/src/session/: mod.rs
crates/game-server/src/session/message/: abyss.rs  activity.rs  arcade.rs  avatar.rs  babel_tower.rs  bangboo.rs  battle_event.rs  battle_pass.rs  cafe.rs  camp_idle.rs  character_quest.rs  client_systems.rs  collections.rs  daily_challenge.rs  fairy.rs  fishing_contest.rs  gacha.rs  hadal_zone.rs  inventory.rs  land_revive.rs  mail.rs  miniscape_entrust.rs  mod.rs  month_card.rs  perform.rs  photo_wall.rs  player.rs  qa_game.rs  quest.rs  ramen.rs  reward_buff.rs  ridus_got_boo.rs  scene.rs  shop.rs  social.rs  vhs_store.rs
crates/gate-server/: Cargo.toml  gateserver.default.toml
crates/gate-server/src/: config.rs  database.rs  main.rs  message_handler.rs  remote_config.rs  session.rs  util.rs
crates/gate-server/src/handlers/: client.rs  server.rs
crates/gate-server/src/net/: connection.rs  mod.rs  packet.rs  packet_handler.rs  packet_processor.rs  tcp_gateway.rs
crates/gate-server/src/packet/: mod.rs  net_packet.rs
crates/gate-server/src/session/: mod.rs
crates/hall-server/: Cargo.toml
crates/hall-server/src/: config.rs  main.rs  server_message_handler.rs
crates/hall-server/src/logic/: listener.rs  message.rs  mod.rs
crates/hall-server/src/logic/ecs/: event_graph.rs  hall.rs  interaction.rs  mod.rs  npc_management.rs  player.rs  scene.rs  scene_save.rs  scene_unit.rs
crates/hall-server/src/logic/save/: mod.rs
crates/hall-server/src/session/: mod.rs
crates/muip-server/: Cargo.toml  muipserver.default.toml
crates/muip-server/src/: config.rs  http_server.rs  main.rs  server_message_handler.rs
crates/trigger-fileconfig/: Cargo.toml
crates/trigger-fileconfig/blockfile/: Cargo.toml
crates/trigger-fileconfig/fbs/: tables.fbs
crates/trigger-fileconfig/gen_flatbuffers/: tables_generated.rs
crates/trigger-fileconfig/src/: lib.rs  main_city_script.rs
crates/trigger-protobuf/: Cargo.toml  build.rs
crates/trigger-protobuf/src/: lib.rs
crates/trigger-protobuf/trigger-protobuf-derive/: Cargo.toml
crates/trigger-sv/: Cargo.toml
crates/trigger-sv/src/: config.rs  gm_command.rs  lib.rs  logging.rs  time_util.rs
crates/trigger-sv/src/message/: management.rs  mod.rs  session.rs
crates/trigger-sv/src/net/: listener.rs  mod.rs  socket.rs
gameserver/: Cargo.toml
kcp/: Cargo.toml
kcp/src/: kcp.rs
lang/: chs.json  cht.json  de.json  en.json  es.json  fr.json  id.json  ja.json  ko.json  lv.json  nl.json  ru.json  vi.json
main/: net-game.bat  net-sdk.bat
proto/: ActivateFarmElementCsReq.proto  AddAvatarScNotify.proto  AddRogueMiracleScNotify.proto  AreaDynamicInfo.proto  AvatarPathChangedNotify.proto  AvatarProperty.proto  AvatarType.proto  BasicModuleSync.proto  BattleEndStatus.proto  BattleEquipment.proto  BattleEventInitedData.proto  BattleEventProperty.proto  BattleRelic.proto  BattleStatistics.proto  BattleTarget.proto  BlackInfo.proto  BoardDataSync.proto  BuyGoodsCsReq.proto  Cargo.toml  ChallengeBossEquipmentInfo.proto  ChallengeBossInfo.proto  ChallengeBossPhaseSettleNotify.proto  ChallengeBossSingleNodeInfo.proto  ChallengeBossStats.proto  ChallengeBuffInfo.proto  ChallengeExtInfo.proto  ChallengeHistoryMaxLevel.proto  ChallengeLineupNotify.proto  ChallengeMemoryClearInfo.proto  ChallengeRaid.proto  ChangeEraFlipperDataCsReq.proto  ChangeLineupLeaderCsReq.proto  Chat.proto  ChatType.proto  ChessRogueAvatarInfo.proto  ChessRogueCell.proto  ChessRogueCellInfo.proto  ChessRogueConfirmRollScRsp.proto  ChessRogueMiracleData.proto  ChessRogueMoneyInfo.proto  (+228 more)
resources/: README.md
sdkserver/: Cargo.toml  versions.json
settings/: freesr-data.json  player.json  versions.json
src/: config.rs  main.rs
yanagi/: Cargo.toml
(+33010 files in other folders)
