[workspace]
members = ["gameserver", "proto", "sdkserver"]
resolver = "3"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.81"
ansi_term = "0.12.1"
atomic_refcell = "0.1.13"
lazy_static = "1.4.0"

axum = "0.8.1"
axum-server = "0.7.1"

env_logger = "0.11.3"

rbase64 = "2.0.3"
rand = "0.9.0"
rsa = { version = "0.9.6", features = [
	"sha1",
	"nightly",
	"pkcs5",
	"serde",
	"sha2",
] }

prost = "0.13.5"
prost-types = "0.13.5"
prost-build = "0.13.5"

paste = "1.0.14"
sysinfo = "0.33.1"

hex = "0.4.3"

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io"] }

tracing = "0.1.40"
tracing-futures = "0.2.5"
tracing-log = { version = "0.2.0", features = ["std", "log-tracer"] }
tracing-subscriber = { version = "0.3.18", features = [
	"env-filter",
	"registry",
	"std",
	"tracing",
	"tracing-log",
] }
tracing-bunyan-formatter = "0.3.9"

proto = { path = "proto/" }
proto-derive = { path = "proto/proto-derive" }
mhy-kcp = { path = "kcp/", features = ["tokio"] }


[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
