[package]
name = "mhy-kcp"
version.workspace = true
edition = "2024"

[features]
fastack-conserve = []
tokio = ["dep:tokio"]

[dependencies]
bytes = "1.6.0"
log = "0.4.21"
thiserror = "2.0.11"
tokio = { version = "1.37.0", optional = true, features = ["io-util"] }

[dev-dependencies]
time = "0.3.34"
rand = "0.9.0"
env_logger = "0.11.3"

