[package]
name = "evelyn-dispatch-server"
edition = "2021"
version.workspace = true

[dependencies]
# Framework
tokio.workspace = true
axum.workspace = true
axum-server.workspace = true

# Error processing
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
rbase64.workspace = true

# Tracing
tracing.workspace = true

# Internal
common.workspace = true
evelyn-encryption.workspace = true
evelyn-http-client.workspace = true
