[package]
name = "trigger-dispatch-server"
edition = "2024"
version.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true

serde.workspace = true
serde_json.workspace = true
base64.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true

trigger-sv.workspace = true
trigger-cryptography.workspace = true
