[package]
name = "trigger-game-server"
edition = "2024"
version.workspace = true

[dependencies]
tokio.workspace = true

rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
dashmap.workspace = true
thiserror.workspace = true

trigger-sv.workspace = true
trigger-logic.workspace = true
trigger-codegen.workspace = true
trigger-encoding.workspace = true
trigger-protocol.workspace = true
trigger-database.workspace = true
trigger-fileconfig.workspace = true
