[package]
name = "trigger-gate-server"
edition = "2024"
version.workspace = true

[dependencies]
tokio.workspace = true
tokio-util.workspace = true

serde.workspace = true
serde_json.workspace = true
dashmap.workspace = true
atomic_enum.workspace = true

rand.workspace = true
base64.workspace = true
byteorder.workspace = true

tracing.workspace = true
thiserror.workspace = true

trigger-sv.workspace = true
trigger-encoding.workspace = true
trigger-cryptography.workspace = true

trigger-database.workspace = true
trigger-protobuf.workspace = true
