[package]
name = "trigger-hall-server"
edition = "2024"
version.workspace = true

[dependencies]
tokio.workspace = true

bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_derive.workspace = true

paste.workspace = true
serde.workspace = true
serde_json.workspace = true
dashmap.workspace = true
tracing.workspace = true

trigger-sv.workspace = true
trigger-logic.workspace = true

trigger-encoding.workspace = true
trigger-protocol.workspace = true
trigger-fileconfig.workspace = true
