[package]
name = "trigger-muip-server"
edition = "2024"
version.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true

paste.workspace = true
serde.workspace = true
serde_json.workspace = true
dashmap.workspace = true
tracing.workspace = true

trigger-sv.workspace = true
trigger-logic.workspace = true

trigger-encoding.workspace = true
trigger-protocol.workspace = true
trigger-fileconfig.workspace = true
