[package]
name = "trigger-protobuf"
edition = "2024"
version.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true
trigger-protobuf-derive = { path = "trigger-protobuf-derive" }
trigger-encoding.workspace = true
trigger-protocol.workspace = true

[build-dependencies]
prost-build.workspace = true
proc-macro2.workspace = true
syn.workspace = true
quote.workspace = true
prettyplease.workspace = true
