[package]
name = "trigger-sv"
edition = "2024"
version.workspace = true

[dependencies]
tokio.workspace = true
futures.workspace = true
zeromq.workspace = true

serde.workspace = true
serde_json.workspace = true
toml.workspace = true
base64.workspace = true
byteorder.workspace = true

iter-read.workspace = true
num_enum.workspace = true

thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

trigger-database.workspace = true
trigger-encoding.workspace = true
trigger-protocol.workspace = true
trigger-cryptography.workspace = true
trigger-codegen.workspace = true
